<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.sw.ck</groupId>
    <artifactId>smart-workflow</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>Smart-WorkFlow</name>
    <description>嵌入 Agent 的低代码 OA 系统后端基础框架</description>
    <url>https://github.com/Chikaaho/Smart-WorkFlow-aPaaS-server</url>

    <modules>
        <!-- BOM 版本管理 -->
        <module>sw-dependencies</module>

        <!-- 内核层 -->
        <module>sw-framework</module>

        <!-- 基础能力层 -->
        <module>sw-basic</module>

        <!-- 业务层 -->
        <module>sw-biz</module>

        <!-- 启动入口 -->
        <module>sw-bootstrap</module>
    </modules>

    <properties>
        <!--
            Phase 6C · CI-friendly 版本身份（BAO-09）：
            ${revision} 是全部 34 个 POM 唯一的工程版本来源；develop 工作树默认解析为
            0.2.0-SNAPSHOT，正式发布构建以 -Drevision=0.2.0 显式覆盖。可消费 POM 的
            版本收敛由 Flatten Maven Plugin（resolveCiFriendliesOnly）完成。
        -->
        <revision>0.2.0-SNAPSHOT</revision>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <!--
        sw-module-dependencies 是子模块（parent 指向本 POM），若在此处把它当 BOM import 回来，
        会在构建模型阶段形成自引用循环（root -> import sw-module-dependencies -> parent=root）。
        因此版本管理的 BOM import 改为下放到每个实际消费依赖的子模块自己的 pom.xml 中声明。
    -->

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>UTF-8</encoding>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>3.4.4</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.5.0</version>
                    <configuration>
                        <rules>
                            <dependencyConvergence/>
                        </rules>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!--
                Phase 6A · Step B：dependencyConvergence 必须在默认生命周期真实执行。
                插件版本与规则集在 pluginManagement 中定义；此处的 execution 被全部 32 个
                反应堆模块继承（build/plugins 可继承），因此 `validate` / `test` / `package`
                以及 CI 的 `mvn install` 都会被守门命中，不依赖手工 `enforcer:enforce`、
                额外 profile 或 CI 私有参数。
                execution id 固定为 enforce-dependency-convergence，日志按此可识别。
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-dependency-convergence</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--
                Phase 6C · CI-friendly 版本身份（BAO-09）：${revision} 只存在于源 POM，
                可消费 POM（install/deploy 落盘与被下游引用的模型）由本插件在
                process-resources 阶段解析为具体版本。resolveCiFriendliesOnly 只解析
                revision/changelist/sha1 等 CI 变量，不改写其余模型内容；updatePomFile=true
                连 packaging=pom 模块一起生效。插件版本在此集中定义，模块不得覆盖；
                过程产物 .flattened-pom.xml 写入 target/（outputDirectory），不进入 Git。
            -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    <updatePomFile>true</updatePomFile>
                    <outputDirectory>${project.build.directory}</outputDirectory>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>prod</id>
            <build>
                <plugins>
                    <!--
                        Phase 6B · dev-only 验证设施隔离的**辅助门禁**（不是唯一归属机制）。
                        唯一归属机制是把这些类移入各模块的 src/dev/java 源码根，只在 `-Pdev`
                        构建下编译，因此生产编译输入天然看不到它们。此处按**精确类名**（非
                        宽通配，避免误伤 AgentGraphDebug* 等正式能力）再排除一次，作为双重保险；
                        制品是否真的不含它们由 scripts/check-prod-artifact.sh 在发布前 fail closed 校验。
                    -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <excludes>
                                <exclude>**/P58DebugNotifyController.java</exclude>
                                <exclude>**/P58DebugNotifyChannelAdapter.java</exclude>
                                <exclude>**/P58DebugParticipantAdapter.java</exclude>
                                <exclude>**/VerificationRunner.java</exclude>
                                <exclude>**/BpmVerificationRunner.java</exclude>
                                <exclude>**/VerifyMapper.java</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <version>3.4.2</version>
                        <configuration>
                            <excludes>
                                <exclude>**/P58DebugNotifyController*.class</exclude>
                                <exclude>**/P58DebugNotifyChannelAdapter*.class</exclude>
                                <exclude>**/P58DebugParticipantAdapter*.class</exclude>
                                <exclude>**/VerificationRunner*.class</exclude>
                                <exclude>**/BpmVerificationRunner*.class</exclude>
                                <exclude>**/VerifyMapper*.class</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
